# claix

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
claix/: __init__.py  __main__.py  ai.py  bot.py  main.py  typer_utils.py  utils.py
