[tool.poetry]
name = "claix"
version = "0.1.6"
description = "A CLI translating user requests into specific CLI commands"
authors = ["Facundo Goiriz <facundogoiriz@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
claix = "claix.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
openai = "^1.45.0"
inquirer = "^3.1.4"
instructor = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
